# agentic-memory

./: .gitignore  CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
blog/: copilot-memory-oss.md  linkedin-v1.0.0.md
examples/: demo.py  memory-lint.yml
src/agentic_memory/: __init__.py  admission.py  api_server.py  backends.py  cli.py  content_validator.py  embedding.py  evidence.py  federation.py  graph.py  hooks.py  lifecycle.py  mcp_server.py  memory.py  migration.py  models.py  plugins.py  semantic.py  store.py  tokenizer.py  watcher.py
src/agentic_memory/bridges/: __init__.py  claude.py  langchain.py
src/agentic_memory/migrations/: __init__.py  v002_fts5_standalone.sql  v003_multi_evidence.sql  v004_agentic_features.sql  v005_adoption_logs.sql  v006_memory_graph.sql  v007_multi_model_embeddings.sql
tests/: test_admission.py  test_agentic_features.py  test_api.py  test_backends.py  test_bridge_claude.py  test_cjk.py  test_content_validator.py  test_core.py  test_embedding.py  test_federation.py  test_graph.py  test_lifecycle.py  test_migration.py  test_phase2_features.py  test_plugins.py  test_semantic.py  test_snapshot_relocation.py
