[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memcite"
version = "0.2.0"
description = "Repo memory for AI agents — every memory has a source, every source gets verified."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Maki Chiba", email = "maki@chiba.tw" },
]
keywords = ["ai", "agent", "memory", "rag", "llm", "citation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]
mcp = [
    "mcp>=1.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
]
embedding = [
    "sentence-transformers>=2.0",
]
claude = []
cjk = [
    "jieba>=0.42",
]

[project.scripts]
am = "agentic_memory.cli:main"
am-mcp = "agentic_memory.mcp_server:main"
am-server = "agentic_memory.api_server:main"

[project.urls]
Homepage = "https://github.com/MakiDevelop/agentic-memory"
Repository = "https://github.com/MakiDevelop/agentic-memory"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_memory"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
